<resources>
    <string name="app_name">PCDGroup</string>

    <string-array name="dropdown_arrays">
        <item>Company</item>
        <item>Housing_Society</item>
        <item>Individual</item>
    </string-array>

    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_brandsettings">Brand Settings</string>
    <string name="action_accesslogin">Access Login</string>
    <string name="action_discount">Discount Client</string>


    <string name="action_address">Address</string>
    <string name="action_access">Address</string>
    <string name="action_brand">Address</string>
    <string name="action_edit">Edit</string>
    <string name="action_pdf">PDF</string>
    <string name="bill_convert">BILL</string>

    <string name="action_admin">Admin</string>

    <string name="action_home">Home</string>

    <string name="toolbar_title">ClientList</string>
    <string name="action_search">Search</string>
    <string name="action_send_PO">Send Purchase Order</string>
    <string name="search_hint">Type name…</string>
    <string name="Done">Done</string>

    <string name="username">Save pdf name</string>
    <string name="verifiecode">Enter verify Code</string>

    <string-array name="dropdown_state">
        <item>Maharashtra</item>
        <item>Andra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madya Pradesh</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

    <string-array name="dropdown_brand">
        <item>PCD</item>
        <item>D.E.R.T</item>
    </string-array>

    <string-array name="dropdown_gst">
        <item>0%</item>
        <item>5%</item>
        <item>12%</item>
        <item>18%</item>
        <item>28%</item>
    </string-array>

    <string-array name="vendor_dealer">
        <item>Vendor</item>
        <item>Dealer</item>
    </string-array>

    <!--  Action Mode Menu Items -->
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>

    // send email
    <string name="emailsend">PCD &amp; DERT \'OTP Registration code'</string>
    <string name="otp_msg"> \u0020 is your OTP Password For Register PCD_GROUP User</string>

    // drawer menu change item color
    <string name="profile"><font color="#303F9F">Profile</font></string>
    <string name="logout"><font color="#FF0000">LogOut</font></string>
    <string name="quotation"><font color="#303F9F">QUOTATION &amp; ORDER</font></string>
    <string name="vendor"><font color="#303F9F">VENDOR &amp; DEALER</font></string>
    <string name="purchase"><font color="#FF0303F9F000">PURCHASE ORDER</font></string>

</resources>