<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/quotation" />
        <item
            android:id="@+id/nav_quotation"
            android:title="Quotation List" />
        <item
            android:id="@+id/nav_order"
            android:title="Order List" />

    </group>

    <item android:title="@string/vendor"
        tools:ignore="HardcodedText">
        <menu>
            <item
                android:id="@+id/nav_vendordealer"
                android:title="New Vendor Dealer" />
        </menu>
    </item>

    <item android:title="@string/purchase">
        <menu>
            <item
                android:id="@+id/nav_po"
                android:title="Purchase Order" />
            <item
                android:id="@+id/nav_finish"
                android:title="Procure Product" />
        </menu>
    </item>

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_email"
                android:title="Email" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>